Convert some paddings to margins to avoid mouse pointer on hover over empty space.

--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -44,7 +44,7 @@
   &__logo {
     // 3.8rem = same height as button components
     height: 3.8rem;
-    padding-right: 20rem;
+    margin-right: 20rem;
     cursor: pointer;
   }
 
