--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ h6 {
   left: 0;
   width: 100vw;
   height: 8rem;
-  background-color: #EEE;
+  background-color: transparent;
   z-index: 1000;
 }
 
@@ -307,15 +307,16 @@ h6 {
   background-color: transparent;
   color: #333;
   border-radius: 4px;
-  border: 1px solid #333;
+  border: 2px solid #333;
   cursor: pointer;
   transition: all 100ms ease-in-out 0s;
+  color: #FFF;
   background-color: #008B8B;
   border-color: #008B8B;
 }
 
 .button--primary:hover, .button--primary:focus {
-  opacity: 0.7;
+  opacity: 0.9;
   outline: 0;
 }
 
@@ -334,7 +335,7 @@ h6 {
   background-color: transparent;
   color: #333;
   border-radius: 4px;
-  border: 1px solid #333;
+  border: 2px solid #333;
   cursor: pointer;
   transition: all 100ms ease-in-out 0s;
 }
@@ -360,7 +361,7 @@ h6 {
   background-color: transparent;
   color: #333;
   border-radius: 4px;
-  border: 1px solid #333;
+  border: 2px solid #333;
   cursor: pointer;
   transition: all 100ms ease-in-out 0s;
 }
