--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -8,7 +8,7 @@
   left: 0;
   width: 100vw;
   height: 8rem;
-  background-color: $light-grey;
+  background-color: transparent;
   z-index: 1000;
 
 
