Complete main navbar and mobile navbar.

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -10,8 +10,7 @@ $color-warning: #F97068;
 $white: #FFF;
 $light-grey: #EEE;
 $medium-grey: #DDD;
-$dark-grey: #3C3C3C;
-$black: #333;
+$black: #3C3C3C;
 
 
 
