--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -36,7 +36,7 @@
     font-size: 2rem;
     line-height: 3.8rem;
     background-color: $light-grey;
-    color: $dark-grey;
+    color: $black;
     border-radius: $border-radius-default;
     border: none;
   }
@@ -48,7 +48,7 @@
     font-size: 2rem;
     line-height: 2.4rem;
     background-color: $light-grey;
-    color: $dark-grey;
+    color: $black;
     border-radius: $border-radius-default;
     border: none;
   }
@@ -61,7 +61,7 @@
     font-size: 2rem;
     line-height: 3.8rem;
     background-color: $light-grey;
-    color: $dark-grey;
+    color: $black;
     border-radius: $border-radius-default;
     border: none;
   }
