--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -18,7 +18,7 @@
     font-size: 1.8rem;
     letter-spacing: 0.1rem;
     background-color: $white;
-    color: $dark-grey;
+    color: $black;
     border-top-left-radius: $border-radius-default;
     border-bottom-left-radius: $border-radius-default;
     border: none;
