--- a/css/main.css
+++ b/css/main.css
@@ -37,12 +37,12 @@ body {
   max-width: 100vw;
   height: 100vh;
   background-color: #FFF;
-  color: #333;
+  color: #3C3C3C;
   overflow-x: hidden;
 }
 
 a {
-  color: #333;
+  color: #3C3C3C;
   cursor: pointer;
 }
 
@@ -144,7 +144,7 @@ h6 {
   left: 0;
   width: 100vw;
   height: 8rem;
-  background-color: transparent;
+  background-color: #EEE;
   z-index: 1000;
 }
 
@@ -158,31 +158,19 @@ h6 {
   margin: 0 auto;
 }
 
-.nav__burger {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  border: none;
-  font-size: 3.8rem;
-  padding: 2.1rem 2rem;
-  margin: 0;
-}
-
-.nav__burger:active, .nav__burger.active {
-  color: #008B8B;
-  background-color: #FFF;
-}
-
 .nav__logo {
   height: 3.8rem;
-  margin-right: 20rem;
   cursor: pointer;
+  outline: none;
 }
 
 .nav__list {
-  height: 3.8rem;
+  position: absolute;
+  top: 0;
+  left: 40rem;
+  line-height: 8rem;
   list-style: none;
+  z-index: 1000;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -204,6 +192,7 @@ h6 {
   font-weight: 600;
   text-decoration: none;
   text-transform: uppercase;
+  outline: none;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -215,9 +204,19 @@ h6 {
   color: #008B8B;
 }
 
+.nav__icons {
+  height: 8rem;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .nav__icon {
-  margin-left: 3rem;
+  margin-left: 5rem;
   font-size: 2rem;
+  outline: none;
   transition: all 100ms ease-in-out 0s;
 }
 
@@ -225,36 +224,97 @@ h6 {
   color: #008B8B;
 }
 
-.nav__button {
-  margin-left: 5rem;
-  padding: 0 1.2rem !important;
+.nav__burger {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  border: none;
+  font-size: 2.6rem;
+  padding: 2.7rem;
+  margin: 0;
+  outline: none;
+  transition: all 100ms ease-in-out 0s;
+}
+
+.nav__burger:active, .nav__burger.active {
+  color: #008B8B;
+  background-color: #FFF;
+}
+
+.nav__dropdown {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  top: 8rem;
+  right: 3%;
+  background-color: #FFF;
+  padding: 2rem;
+  list-style: none;
+  border-radius: 4px;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
+  transition: all 100ms ease-in-out 0s;
+}
+
+.nav__dropdown-link {
+  display: block;
+  width: 15rem;
+  padding: 1rem;
+  font-size: 1.2rem;
+  font-weight: 400;
+  text-decoration: none;
+  transition: all 100ms ease-in-out 0s;
+}
+
+.nav__dropdown-link:hover {
+  color: #008B8B;
+}
+
+.nav__dropdown-link.username,
+.nav__dropdown-link .username:hover {
+  color: #3C3C3C;
+  cursor: default;
+}
+
+.nav__dropdown-link.disabled,
+.nav__dropdown-link .disabled:hover {
+  color: #DDD;
+  cursor: default;
+}
+
+.nav__dropdown-link.warning:hover {
+  color: #F97068;
+}
+
+.nav__dropdown hr {
+  border: 1px solid #DDD;
+  margin: 0.5rem 1rem;
 }
 
 /* MEDIA QUERIES
 --------------------------------------------*/
-@media only screen and (max-width: 1023px) {
-  .nav__container {
-    display: block;
-    position: relative;
+@media only screen and (max-width: 1680px) {
+  .nav__list {
+    left: 30rem;
   }
+}
+
+@media only screen and (max-width: 1280px) {
+  .nav__list {
+    left: 22rem;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
   .nav__burger {
     display: block;
-  }
-  .nav__logo {
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 8rem;
-    padding: 2.1rem;
-    text-align: center;
   }
   .nav__list {
     position: fixed;
     top: 0;
     left: 0;
     margin-top: 8rem;
-    height: 0;
+    line-height: 0;
     opacity: 0;
     width: 100vw;
     max-width: 100vw;
@@ -276,7 +336,21 @@ h6 {
   }
   .nav__link:hover {
     color: #008B8B;
+  }
+  .nav__link:active {
     background-color: #DDD;
+    color: #008B8B;
+  }
+  .nav__icons {
+    position: absolute;
+    top: 0;
+    right: 8rem;
+  }
+  .nav__icon {
+    margin-left: 0;
+  }
+  .nav__dropdown {
+    right: -26%;
   }
 }
 
@@ -286,7 +360,7 @@ h6 {
   display: block;
   width: 100%;
   height: 15rem;
-  background-color: #333;
+  background-color: #3C3C3C;
   color: #DDD;
 }
 
@@ -305,9 +379,9 @@ h6 {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  color: #333;
+  color: #3C3C3C;
   border-radius: 4px;
-  border: 2px solid #333;
+  border: 2px solid #3C3C3C;
   cursor: pointer;
   transition: all 100ms ease-in-out 0s;
   color: #FFF;
@@ -333,9 +407,9 @@ h6 {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  color: #333;
+  color: #3C3C3C;
   border-radius: 4px;
-  border: 2px solid #333;
+  border: 2px solid #3C3C3C;
   cursor: pointer;
   transition: all 100ms ease-in-out 0s;
 }
@@ -359,9 +433,9 @@ h6 {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  color: #333;
+  color: #3C3C3C;
   border-radius: 4px;
-  border: 2px solid #333;
+  border: 2px solid #3C3C3C;
   cursor: pointer;
   transition: all 100ms ease-in-out 0s;
 }
