--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -2,13 +2,14 @@
 /* NAVIGATION
 --------------------------------------------*/
 
+// MAIN NAV
 .nav {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 8rem;
-  background-color: transparent;
+  background-color: $light-grey;
   z-index: 1000;
 
 
@@ -20,38 +21,20 @@
   }
 
 
-  &__burger {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    border: none;
-
-    // 3.8rem = same height as button components
-    font-size: 3.8rem;
-    // 8rem navbar height - 3.8rem font-size = 4.2rem. Divide by 2 = 2.1rem top and bottom padding.
-    padding: 2.1rem 2rem;
-    margin: 0;
-
-    &:active,
-    &.active {
-      color: $color-primary;
-      background-color: $white;
-    }
-  }
-
-
   &__logo {
-    // 3.8rem = same height as button components
     height: 3.8rem;
-    margin-right: 20rem;
     cursor: pointer;
+    outline: none;
   }
 
 
   &__list {
-    height: 3.8rem;
+    position: absolute;
+    top: 0;
+    left: 40rem;
+    line-height: 8rem; // 8rem = navbar height
     list-style: none;
+    z-index: 1000;
     @include display-flex;
   }
 
@@ -69,6 +52,7 @@
     font-weight: 600;
     text-decoration: none;
     text-transform: uppercase;
+    outline: none;
     @include display-flex;
     @include transition;
 
@@ -77,12 +61,17 @@
   }
 
 
-  // Inline styles used for "Login / Register" nav link: see HTML -> body -> Main Content -> Navigation -> Login, cart and account
+  &__icons {
+    height: 8rem;
+    list-style: none;
+    @include display-flex;
+  }
 
 
   &__icon {
-    margin-left: 3rem;
+    margin-left: 5rem;
     font-size: 2rem;
+    outline: none;
     @include transition;
 
     &:hover,
@@ -90,11 +79,80 @@
   }
 
 
-  &__button {
-    margin-left: 5rem;
 
-    // '!important' overrides the default button padding used for the rest of the website
-    padding: 0 1.2rem !important;
+
+
+  // MOBILE ONLY
+  &__burger {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    border: none;
+    font-size: 2.6rem;
+
+    // 8rem navbar height - 2.6rem font-size = 5.4rem. Divide by 2 = 2.7rem padding.
+    padding: 2.7rem;
+    margin: 0;
+    outline: none;
+    @include transition;
+
+    &:active,
+    &.active {
+      color: $color-primary;
+      background-color: $white;
+    }
+  }
+
+
+
+
+
+  // DROPDOWN MENU
+  &__dropdown {
+    display: none; // Changed with dropdownMenu.js
+    opacity: 0; // Changed with dropdownMenu.js
+    position: absolute;
+    top: 8rem; // 8rem = navbar height
+    right: 3%;
+    background-color: $white;
+    padding: 2rem;
+    list-style: none;
+    border-radius: $border-radius-default;
+    @include box-shadow;
+    @include transition;
+
+    &-link {
+      display: block;
+      width: 15rem;
+      padding: 1rem;
+      font-size: 1.2rem;
+      font-weight: 400;
+      text-decoration: none;
+      @include transition;
+
+      &:hover { color: $color-primary; }
+      
+      // Below code adjusts dropdown menu content styles, such as strong text, warning red hover color, and disabled links
+      &.username,
+      .username:hover {
+        color: $black;
+        cursor: default;
+      }
+
+      &.disabled,
+      .disabled:hover {
+        color: $medium-grey;
+        cursor: default;
+      }
+
+      &.warning:hover { color: $color-warning; }
+    }
+
+    & hr {
+      border: 1px solid $medium-grey;
+      margin: 0.5rem 1rem;
+    }
   }
 }
 
@@ -104,32 +162,19 @@
 
 /* MEDIA QUERIES
 --------------------------------------------*/
+@media only screen and (max-width: 1680px) {
+  .nav__list { left: 30rem; }
+}
+
+@media only screen and (max-width: 1280px) {
+  .nav__list { left: 22rem; }
+}
 
 @media only screen and (max-width: 1023px) {
   .nav {
   
-    &__container {
-      display: block;
-      position: relative;
-    }
-  
   
     &__burger { display: block; }
-  
-  
-    &__logo {
-      position: fixed;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-
-      // 8rem = same height as navbar
-      height: 8rem;
-
-      // 8 current height - 3.8 original height = 4.2. Divide by 2 gives 2.1rem padding top and bottom.
-      padding: 2.1rem;
-      text-align: center;
-    }
   
   
     &__list {
@@ -137,8 +182,8 @@
       top: 0;
       left: 0;
       margin-top: 8rem;
-      height: 0; // Changed with JS - toggleMenu.js
-      opacity: 0; // Changed with JS - toggleMenu.js
+      line-height: 0;
+      opacity: 0; // Changed with burgerMenu.js
       width: 100vw;
       max-width: 100vw;
       padding: 2rem 0;
@@ -160,8 +205,24 @@
 
       &:hover {
         color: $color-primary;
+      }
+
+      &:active {
         background-color: $medium-grey;
+        color: $color-primary;
       }
     }
+
+
+    &__icons {
+      position: absolute;
+      top: 0;
+      right: 8rem;
+    }
+  
+  
+    &__icon { margin-left: 0; }
+
+    &__dropdown { right: -26%; }
   }
 }
