--- a/css/main.css
+++ b/css/main.css
@@ -66,22 +66,22 @@ body {
 }
 
 h1 {
-  font-size: 4.8rem;
-  font-weight: 400;
+  font-size: 3.8rem;
+  font-weight: 600;
   line-height: 4.8rem;
   letter-spacing: 0.2rem;
 }
 
 h2 {
   font-size: 3.2rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 3.2rem;
   letter-spacing: 0.2rem;
 }
 
 h3 {
   font-size: 2.4rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 2.4rem;
   letter-spacing: 0.2rem;
 }
@@ -111,7 +111,7 @@ h6 {
 --------------------------------------------*/
 .container {
   width: 80%;
-  max-width: 1500px;
+  max-width: 1400px;
   height: 100%;
   margin: 0 auto;
 }
@@ -144,7 +144,7 @@ h6 {
   left: 0;
   width: 100vw;
   height: 8rem;
-  background-color: #EEE;
+  background-color: transparent;
   z-index: 1000;
 }
 
@@ -197,7 +197,7 @@ h6 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .nav__link:hover, .nav__link.active {
@@ -217,7 +217,7 @@ h6 {
   margin-left: 5rem;
   font-size: 2rem;
   outline: none;
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .nav__icon:hover, .nav__icon.active {
@@ -234,7 +234,7 @@ h6 {
   padding: 2.7rem;
   margin: 0;
   outline: none;
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .nav__burger:active, .nav__burger.active {
@@ -253,7 +253,7 @@ h6 {
   list-style: none;
   border-radius: 4px;
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .nav__dropdown-link {
@@ -263,7 +263,7 @@ h6 {
   font-size: 1.2rem;
   font-weight: 400;
   text-decoration: none;
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .nav__dropdown-link:hover {
@@ -383,7 +383,7 @@ h6 {
   border-radius: 4px;
   border: 2px solid #3C3C3C;
   cursor: pointer;
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
   color: #FFF;
   background-color: #008B8B;
   border-color: #008B8B;
@@ -411,7 +411,7 @@ h6 {
   border-radius: 4px;
   border: 2px solid #3C3C3C;
   cursor: pointer;
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .button--positive:hover, .button--positive:focus {
@@ -437,7 +437,7 @@ h6 {
   border-radius: 4px;
   border: 2px solid #3C3C3C;
   cursor: pointer;
-  transition: all 100ms ease-in-out 0s;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .button--negative:hover, .button--negative:focus {
@@ -671,8 +671,49 @@ h6 {
 /* HOMEPAGE
 --------------------------------------------*/
 .hero {
-  height: 100%;
+  height: 85%;
   width: 100%;
+  background-image: url("../img/hero_img.jpg");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.hero__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.hero__bg-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 85%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.hero__titles {
+  z-index: 100;
+}
+
+.hero__h1 {
+  font-size: 6rem;
+  font-weight: 700;
+  line-height: 1.4;
+  margin-bottom: 3rem;
+}
+
+.hero__h1--color-primary {
+  color: #008B8B;
+}
+
+.hero__link {
+  font-size: 1.4rem;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 /* LOGIN & REGISTER
