--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -4,7 +4,7 @@
 
 // HERO SCREEN
 .hero {
-  height: 85%; // same as bg-overlay height
+  height: 185%; // same as bg-overlay height
   width: 100%;
   background-image: url("../img/hero_img.jpg");
   background-position: top;
@@ -18,7 +18,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 85%; // same as .hero height
+    height: 185%; // same as .hero height
     background-color: rgba(255, 255, 255, 0.1);
   }
 
@@ -42,3 +42,12 @@
   }
 }
 
+
+
+
+
+/* MEDIA QUERIES
+--------------------------------------------*/
+@media only screen and (max-width: 1024px) {
+  .hero__h1 { font-size: 5rem; }
+}
