--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -51,3 +51,18 @@
 @media only screen and (max-width: 1024px) {
   .hero__h1 { font-size: 5rem; }
 }
+
+@media only screen and (max-width: 768px) {
+  .hero__h1 { font-size: 4rem; }
+}
+
+@media only screen and (max-width: 450px) {
+  .hero { background-position: 10% 0%; }
+}
+
+@media only screen and (max-height: 1000px) {
+  .hero,
+  .hero__bg-overlay {
+    height: 100%;
+  }
+}
