--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -46,7 +46,7 @@
 
 
 
-/* MEDIA QUERIES
+/* MEDIA QUERIES (HERO SCREEN)
 --------------------------------------------*/
 @media only screen and (max-width: 1024px) {
   .hero__h1 { font-size: 5rem; }
