--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -5,26 +5,26 @@
 // Set 1rem = 10px
 html { font-size: 62.5%; }
 
+
 body {
   font-family: $font-primary;
   font-size: 1.4rem;
   font-weight: 400;
-  line-height: 1.8rem;
+  line-height: 2.4rem;
   letter-spacing: 0.06rem;
 }
 
 
-// Line height for all headings = font size
 h1 {
   font-size: 3.8rem;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 4.8rem;
   letter-spacing: 0.2rem;
 }
 
 h2 {
   font-size: 3.2rem;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 3.2rem;
   letter-spacing: 0.2rem;
 }
@@ -56,3 +56,6 @@ h6 {
   line-height: 1.2rem;
   letter-spacing: 0.2rem;
 }
+
+
+.text--color-primary { color: $color-primary; }
