--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@
 @import 'components/forms';
 @import 'components/search-bar';
 @import 'components/data-table';
+@import 'components/book-grid';
 
 // Includes page-specific styling.
 @import 'pages/homepage'; // index.php
