--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -15,10 +15,11 @@ body {
 }
 
 
+// Minimum line-height 2.4rem for consistency
 h1 {
   font-size: 3.8rem;
   font-weight: 700;
-  line-height: 4.8rem;
+  line-height: 3.8rem;
   letter-spacing: 0.2rem;
 }
 
@@ -37,25 +38,22 @@ h3 {
 }
 
 h4 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 600;
-  line-height: 1.8rem;
+  line-height: 2.4rem;
   letter-spacing: 0.2rem;
 }
 
 h5 {
   font-size: 1.4rem;
   font-weight: 600;
-  line-height: 1.4rem;
+  line-height: 2.4rem;
   letter-spacing: 0.2rem;
 }
 
 h6 {
   font-size: 1.2rem;
   font-weight: 600;
-  line-height: 1.2rem;
+  line-height: 2.4rem;
   letter-spacing: 0.2rem;
 }
-
-
-.text--color-primary { color: $color-primary; }
