--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,6 @@ a {
   cursor: pointer;
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
 img {
   max-width: 100%;
   max-height: 100%;
@@ -705,6 +701,10 @@ h6 {
 
 .book-grid__link {
   text-decoration: none;
+}
+
+.book-grid__link:hover {
+  text-decoration: underline;
 }
 
 .book-grid__img {
