--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -6,12 +6,10 @@
 // Mixin created to allow for use of '@include button' instead of '@extend .button'.
 @mixin button {
   display: inline-block;
-  height: 3.8rem;
-  padding: 0 3rem;
+  padding: 0.6rem 3rem 0.5rem 3rem;
   text-align: center;
   font-size: 1.2rem;
   font-weight: 600;
-  line-height: 3.8rem;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -64,7 +62,5 @@
 // To be added in addition to one of the other button classes
 .button--large {
   font-size: 1.4rem;
-  height: 5rem;
-  line-height: 5rem;
-  padding: 0 4rem;
+  padding: 1.2rem 4.4rem 1.1rem 4.4rem;
 }
