--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -6,7 +6,7 @@
 .hero {
   height: 85%; // same as bg-overlay height
   width: 100%;
-  background-image: url("../img/hero_img.jpg");
+  background-image: url("../img/hero.jpg");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -65,6 +65,27 @@
 
 
 
+// REGISTRATION PROMPT
+.reg-prompt {
+  width: 100%;
+  height: 52rem;
+  text-align: center;
+  background-image: url("../img/reg_prompt.jpg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  &__container { @include display-flex($justify: flex-end); }
+
+  &__content { max-width: 65rem; }
+
+  &__heading { margin-bottom: 2rem; }
+
+  &__description { margin-bottom: 6rem; }
+}
+
+
+
 
 
 /* MEDIA QUERIES (HERO SCREEN)
@@ -100,4 +121,19 @@
 @media only screen and (max-width: 450px) {
   // Reduces number of featured titles displayed on smaller screens
   .featured__book-grid { max-height: 174rem; }
+}
+
+
+
+/* MEDIA QUERIES (REGISTRATION PROMPT)
+--------------------------------------------*/
+@media only screen and (max-width: 1024px) {
+  .reg-prompt { background-position: right bottom; }
+}
+
+@media only screen and (max-width: 850px) {
+  .reg-prompt {
+    background-image: url("../img/reg_prompt_mobile.jpg");
+    &__container { justify-content: center; }
+  }
 }
