--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -25,11 +25,7 @@
   }
 
 
-  &__logo {
-    height: 3.8rem;
-    cursor: pointer;
-    outline: none;
-  }
+  &__logo { height: 3.8rem; }
 
 
   &__list {
