--- a/css/main.css
+++ b/css/main.css
@@ -161,8 +161,6 @@ h6 {
 
 .nav__logo {
   height: 3.8rem;
-  cursor: pointer;
-  outline: none;
 }
 
 .nav__list {
@@ -361,11 +359,89 @@ h6 {
 /* FOOTER
 --------------------------------------------*/
 .footer {
-  display: block;
   width: 100%;
-  height: 15rem;
-  background-color: #3C3C3C;
-  color: #DDD;
+  text-align: center;
+  background-color: #EEE;
+}
+
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 6rem 0;
+}
+
+.footer__logo {
+  height: 3.8rem;
+  margin-bottom: 2.4rem;
+}
+
+.footer__message {
+  max-width: 65rem;
+}
+
+.footer__social {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 3.2rem;
+  width: 20rem;
+  padding: 4.2rem 0;
+}
+
+.footer__icon.facebook:hover {
+  color: #3b5998;
+}
+
+.footer__icon.twitter:hover {
+  color: #55acee;
+}
+
+.footer__icon.youtube:hover {
+  color: #e52d27;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  width: 52rem;
+}
+
+.footer__link {
+  font-size: 1.4rem;
+  font-weight: 600;
+  text-decoration: none;
+  text-transform: uppercase;
+  outline: none;
+  transition: all 150ms ease-in-out 0s;
+}
+
+.footer__link:hover, .footer__link.active {
+  color: #008B8B;
+}
+
+.footer__bottom-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  padding: 1.6rem 0;
+  border-top: 1px solid #DDD;
+}
+
+.footer__payment-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 3.2rem;
+  width: 16rem;
 }
 
 /* BUTTONS
@@ -785,10 +861,6 @@ h6 {
 
 .featured__heading {
   margin-bottom: 2rem;
-}
-
-.featured__heading span {
-  color: #008B8B;
 }
 
 .featured__book-grid {
