--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,9 +3,75 @@
 --------------------------------------------*/
 
 .footer {
-  display: block;
   width: 100%;
-  height: 15rem;
-  background-color: $black;
-  color: $medium-grey;
+  text-align: center;
+  background-color: $light-grey;
+
+
+  &__container {
+    @include display-flex($direction: column);
+    padding: 6rem 0;
+  }
+
+
+  &__logo {
+    height: 3.8rem;
+    margin-bottom: 2.4rem;
+  }
+
+
+  &__message { max-width: 65rem; }
+
+
+  &__social {
+    @include display-flex($justify: space-between);
+    font-size: 3.2rem;
+    width: 20rem;
+    padding: 4.2rem 0;
+  }
+
+
+  &__icon.facebook:hover { color: #3b5998; } // Facebook blue
+  &__icon.twitter:hover { color: #55acee; } // Twitter blue
+  &__icon.youtube:hover { color: #e52d27; } // YouTube red
+
+
+  &__list {
+    @include display-flex($justify: space-between);
+    list-style: none;
+    width: 52rem; //32rem;
+  }
+
+
+  &__link {
+    font-size: 1.4rem;
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: uppercase;
+    outline: none;
+    @include transition;
+
+    &:hover,
+    &.active { color: $color-primary; }
+  }
+
+
+  &__bottom-wrapper {
+    @include display-flex($justify: space-between);
+    max-width: 1200px;
+    padding: 1.6rem 0;
+    border-top: 1px solid $medium-grey;
+  }
+
+
+  &__payment-info {
+    @include display-flex($justify: space-between);
+    font-size: 3.2rem; // Same size as social icons
+    width: 16rem;
+  }
 }
+
+
+
+
+
