Create page-banner layout component.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 // Includes layout tools and styles for core page elements.
 @import 'layout/wrappers';
 @import 'layout/navigation';
+@import 'layout/pageBanner';
 @import 'layout/footer';
 
 // Includes all component styles, including component-specific mixins and functions.
