--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,34 @@ h6 {
   }
 }
 
+/* PAGE BANNER
+--------------------------------------------*/
+.page-banner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 38rem;
+  background-image: url("../img/paper_texture.jpg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.page-banner__bg-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 38rem;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.page-banner__title {
+  z-index: 100;
+}
+
 /* FOOTER
 --------------------------------------------*/
 .footer {
