--- a/css/main.css
+++ b/css/main.css
@@ -653,7 +653,6 @@ h6 {
 .search-bar {
   width: 100%;
   max-width: 60rem;
-  margin: 6rem 0 2rem 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -671,12 +670,15 @@ h6 {
   color: #3C3C3C;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  border: none;
+  border: 1px solid #3C3C3C;
+  border-right: none;
+  outline: none;
 }
 
 .search-bar__button {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  height: 3.8rem;
 }
 
 .search-bar__button--mobile {
@@ -843,6 +845,88 @@ h6 {
 
 .book-grid__price {
   color: #008B8B;
+}
+
+/* ABOUT
+--------------------------------------------*/
+.about {
+  min-height: 100%;
+  width: 100%;
+}
+
+/* BASKET
+--------------------------------------------*/
+.basket {
+  min-height: 100%;
+  width: 100%;
+}
+
+/* BOOK DETAILS
+--------------------------------------------*/
+.book-details {
+  min-height: 100%;
+  width: 100%;
+}
+
+/* BOOKS
+--------------------------------------------*/
+.books {
+  width: 100%;
+  padding: 8rem 0;
+}
+
+.books__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.books__column {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.books__column--one-fourth {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  height: 200px;
+  background-color: #EEE;
+}
+
+.books__column--three-fourths {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex: 3;
+  height: 200px;
+  background-color: #DDD;
+}
+
+.books hr {
+  width: 100%;
+  border: 1px solid #DDD;
+  margin: 3rem 0;
+}
+
+/* CHECKOUT
+--------------------------------------------*/
+.checkout {
+  min-height: 100%;
+  width: 100%;
+}
+
+/* CONTACT
+--------------------------------------------*/
+.contact {
+  min-height: 100%;
+  width: 100%;
 }
 
 /* HOMEPAGE
@@ -1013,16 +1097,23 @@ h6 {
   width: 100%;
 }
 
-/* ABOUT
+/* PAYMENT CONFIRMATION
 --------------------------------------------*/
-.about {
+.payment-confirmation {
   min-height: 100%;
   width: 100%;
 }
 
-/* CONTACT
+/* PURCHASE HISTORY
 --------------------------------------------*/
-.contact {
+.purchase-history {
+  min-height: 100%;
+  width: 100%;
+}
+
+/* WISHLIST
+--------------------------------------------*/
+.wishlist {
   min-height: 100%;
   width: 100%;
 }
