--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ h6 {
 /* WRAPPERS
 --------------------------------------------*/
 .container {
-  width: 80%;
+  width: 85%;
   max-width: 1400px;
   height: 100%;
   margin: 0 auto;
@@ -118,12 +118,6 @@ h6 {
 
 /* MEDIA QUERIES
 --------------------------------------------*/
-@media only screen and (max-width: 1200px) {
-  .container {
-    width: 85%;
-  }
-}
-
 @media only screen and (max-width: 1000px) {
   .container {
     width: 90%;
@@ -381,6 +375,7 @@ h6 {
 }
 
 .page-banner__title {
+  text-transform: uppercase;
   z-index: 100;
 }
 
@@ -813,11 +808,12 @@ h6 {
   align-items: flex-start;
   flex-wrap: wrap;
   width: 100%;
+  text-align: center;
 }
 
 .book-grid__item {
   max-width: 24rem;
-  margin: 0 1.2rem;
+  margin: 0 2rem;
 }
 
 .book-grid__link {
@@ -845,6 +841,18 @@ h6 {
 
 .book-grid__price {
   color: #008B8B;
+}
+
+/* MEDIA QUERIES
+--------------------------------------------*/
+@media only screen and (max-width: 1280px) {
+  .book-grid__item {
+    max-width: 20rem;
+    margin: 0 1.2rem;
+  }
+  .book-grid__img {
+    height: 32rem;
+  }
 }
 
 /* ABOUT
@@ -882,6 +890,13 @@ h6 {
   align-items: center;
 }
 
+.books__container--align-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .books__column {
   display: flex;
   flex-direction: row;
@@ -889,30 +904,68 @@ h6 {
   align-items: center;
 }
 
-.books__column--one-fourth {
+.books__column--narrow {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex: 1;
-  height: 200px;
-  background-color: #EEE;
+  min-width: 28rem;
 }
 
-.books__column--three-fourths {
+.books__column--wide {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex: 3;
-  height: 200px;
-  background-color: #DDD;
+  flex: auto;
 }
 
 .books hr {
   width: 100%;
   border: 1px solid #DDD;
-  margin: 3rem 0;
+  margin-top: 3rem;
+}
+
+.books__categories-list {
+  width: 100%;
+  padding-top: 6rem;
+}
+
+.books__category-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 5.2rem;
+  width: 100%;
+  padding: 0 1rem;
+  font-weight: 600;
+  border-bottom: 2px dotted #DDD;
+  cursor: pointer;
+}
+
+.books__category-item:hover {
+  color: #008B8B;
+}
+
+/* MEDIA QUERIES
+--------------------------------------------*/
+@media only screen and (max-width: 1750px) {
+  .books__column--narrow {
+    min-width: 34rem;
+  }
+}
+
+@media only screen and (max-width: 1500px) {
+  .books__column--narrow {
+    min-width: 24rem;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .books__column--narrow {
+    min-width: 20rem;
+  }
 }
 
 /* CHECKOUT
@@ -1061,15 +1114,21 @@ h6 {
 
 /* MEDIA QUERIES (FEATURED TITLES)
 --------------------------------------------*/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1280px) {
   .featured__book-grid {
-    max-height: 116rem;
+    max-height: 54rem;
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 706px) {
   .featured__book-grid {
-    max-height: 174rem;
+    max-height: 108rem;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .featured__book-grid {
+    max-height: 164rem;
   }
 }
 
