--- a/scss/layout/_pageBanner.scss
+++ b/scss/layout/_pageBanner.scss
@@ -20,5 +20,8 @@
     background-color: rgba(255, 255, 255, 0.3);
   }
 
-  &__title { z-index: 100; }
+  &__title {
+    text-transform: uppercase;
+    z-index: 100;
+  }
 }
