Complete books.html making mobile responsive.

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 2.4rem;
@@ -494,9 +494,9 @@ h6 {
 --------------------------------------------*/
 .button--primary {
   display: inline-block;
-  padding: 0.6rem 3rem 0.5rem 3rem;
+  padding: 0.7rem 3rem 0.6rem 3rem;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
@@ -520,9 +520,9 @@ h6 {
 
 .button--positive {
   display: inline-block;
-  padding: 0.6rem 3rem 0.5rem 3rem;
+  padding: 0.7rem 3rem 0.6rem 3rem;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
@@ -544,9 +544,9 @@ h6 {
 
 .button--negative {
   display: inline-block;
-  padding: 0.6rem 3rem 0.5rem 3rem;
+  padding: 0.7rem 3rem 0.6rem 3rem;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
@@ -655,40 +655,43 @@ h6 {
 }
 
 .search-bar__input {
+  font-family: Poppins;
   flex: 1;
+  min-width: 28rem;
   height: 3.8rem;
   padding: 0 1.5rem;
   line-height: 3.8rem;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   letter-spacing: 0.1rem;
   background-color: #FFF;
   color: #3C3C3C;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  border: 1px solid #3C3C3C;
+  border: 2px solid #DDD;
   border-right: none;
   outline: none;
 }
 
 .search-bar__button {
+  font-family: Poppins;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   height: 3.8rem;
+  border: 2px solid #DDD;
 }
 
 .search-bar__button--mobile {
+  font-family: Poppins;
   display: none;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  height: 3.8rem;
   padding: 0 1.5rem;
 }
 
 /* MEDIA QUERIES
 --------------------------------------------*/
-@media only screen and (max-width: 450px) {
-  .search-bar {
-    margin-top: 4rem;
-  }
+@media only screen and (max-width: 1000px) {
   .search-bar__button {
     display: none;
   }
@@ -845,7 +848,7 @@ h6 {
 
 /* MEDIA QUERIES
 --------------------------------------------*/
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 1366px) {
   .book-grid__item {
     max-width: 20rem;
     margin: 0 1.2rem;
@@ -928,7 +931,7 @@ h6 {
 
 .books__categories-list {
   width: 100%;
-  padding-top: 6rem;
+  padding: 6rem 2rem 0 2rem;
 }
 
 .books__category-item {
@@ -938,14 +941,18 @@ h6 {
   align-items: center;
   height: 5.2rem;
   width: 100%;
+  max-width: 70rem;
+  margin: 0 auto;
   padding: 0 1rem;
   font-weight: 600;
   border-bottom: 2px dotted #DDD;
   cursor: pointer;
+  transition: all 150ms ease-in-out 0s;
 }
 
 .books__category-item:hover {
   color: #008B8B;
+  padding: 0 0.8rem;
 }
 
 /* MEDIA QUERIES
@@ -962,9 +969,18 @@ h6 {
   }
 }
 
-@media only screen and (max-width: 1200px) {
-  .books__column--narrow {
-    min-width: 20rem;
+@media only screen and (max-width: 1050px) {
+  .books__container {
+    flex-direction: column-reverse;
+  }
+  .books__container--align-top {
+    flex-direction: column;
+  }
+  .books__column--narrow, .books__column--wide {
+    width: 100%;
+  }
+  .books__sidebar-heading {
+    margin-top: 3rem;
   }
 }
 
