--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -19,7 +19,7 @@ $black: #3C3C3C;
 /* FONTS
 --------------------------------------------*/
 
-$font-primary: 'Poppins', sans-serif;
+$font-primary: Poppins, sans-serif;
 
 
 
