--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -10,31 +10,37 @@
   @include display-flex;
 
   &__input {
+    font-family: Poppins;
     flex: 1;
+    min-width: 28rem;
     height: 3.8rem;
     padding: 0 1.5rem;
     line-height: 3.8rem;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     letter-spacing: 0.1rem;
     background-color: $white;
     color: $black;
     border-top-left-radius: $border-radius-default;
     border-bottom-left-radius: $border-radius-default;
-    border: 1px solid $black;
+    border: 2px solid $medium-grey;
     border-right: none;
     outline: none;
   }
 
   &__button {
+    font-family: Poppins;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     height: 3.8rem;
+    border: 2px solid $medium-grey;
   }
 
   &__button--mobile {
+    font-family: Poppins;
     display: none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    height: 3.8rem;
     padding: 0 1.5rem;
   }
 }
@@ -47,10 +53,8 @@
 --------------------------------------------*/
 
 // Phones
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 1000px) {
   .search-bar {
-    margin-top: 4rem;
-  
     &__button { display: none; }
   
     &__button--mobile { display: block; }
