--- a/css/main.css
+++ b/css/main.css
@@ -359,7 +359,7 @@ h6 {
   align-items: center;
   width: 100%;
   height: 38rem;
-  background-image: url("../img/paper_texture.jpg");
+  background-image: url("../img/banner.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -371,7 +371,7 @@ h6 {
   left: 0;
   width: 100%;
   height: 38rem;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .page-banner__title {
