--- a/scss/layout/_pageBanner.scss
+++ b/scss/layout/_pageBanner.scss
@@ -6,7 +6,7 @@
   @include display-flex;
   width: 100%;
   height: 38rem; // same as &__bg-overlay height
-  background-image: url("../img/paper_texture.jpg");
+  background-image: url("../img/banner.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -17,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 38rem; // same as .page-banner height
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.1);
   }
 
   &__title {
