Build Contact page.

--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -5,4 +5,42 @@
 .contact {
   width: 100%;
   padding: 8rem 0;
+
+
+  &__container { @include display-flex($align: flex-start); }
+
+
+  &__column {
+    &--narrow {
+      @include display-flex($direction: column, $justify: flex-start, $align: flex-start);
+      flex: 1;
+    }
+    &--wide {
+      @include display-flex($direction: column, $justify: flex-start, $align: flex-start);
+      flex: 2;
+      margin-right: 8rem;
+    }
+  }
+
+
+  &__heading { margin-bottom: 3rem; }
+
+
+  &__text { margin-bottom: 5rem; }
+
+
+  &__icon-wrapper {
+    @include display-flex;
+    margin-bottom: 3rem;
+  }
+
+
+  &__icon {
+    font-size: 3rem;
+    width: 3rem;
+    margin-right: 3rem;
+  }
+
+
+  &__icon-text { padding-top: 0.4rem; }
 }
