--- a/css/main.css
+++ b/css/main.css
@@ -582,6 +582,7 @@ h6 {
 }
 
 .form__label {
+  display: block;
   font-weight: 600;
 }
 
@@ -601,24 +602,28 @@ h6 {
   height: 3.8rem;
   padding: 0 1.5rem;
   margin: 0.5rem 0 2rem 0;
-  font-size: 2rem;
+  font-size: 1.6rem;
+  font-family: Poppins;
   line-height: 3.8rem;
-  background-color: #EEE;
+  background-color: #FFF;
   color: #3C3C3C;
   border-radius: 4px;
-  border: none;
+  border: 2px solid #DDD;
+  outline: none;
 }
 
 .form__text-area {
   width: 100%;
   padding: 1rem 1.5rem;
   margin: 0.5rem 0 2rem 0;
-  font-size: 2rem;
+  font-size: 1.6rem;
+  font-family: Poppins;
   line-height: 2.4rem;
-  background-color: #EEE;
+  background-color: #FFF;
   color: #3C3C3C;
   border-radius: 4px;
-  border: none;
+  border: 2px solid #DDD;
+  outline: none;
 }
 
 .form__select {
@@ -626,17 +631,18 @@ h6 {
   height: 3.8rem;
   padding: 0 1.5rem;
   margin: 0.5rem 0 2rem 0;
-  font-size: 2rem;
+  font-size: 1.6rem;
+  font-family: Poppins;
   line-height: 3.8rem;
-  background-color: #EEE;
+  background-color: #FFF;
   color: #3C3C3C;
   border-radius: 4px;
-  border: none;
+  border: 2px solid #DDD;
+  outline: none;
 }
 
 .form__button {
-  width: 100%;
-  margin-top: 3rem;
+  margin: 2rem 1rem 0 0;
 }
 
 .form__file-upload-button {
@@ -1042,6 +1048,56 @@ h6 {
 .contact {
   width: 100%;
   padding: 8rem 0;
+}
+
+.contact__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.contact__column--narrow {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex: 1;
+}
+
+.contact__column--wide {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex: 2;
+  margin-right: 8rem;
+}
+
+.contact__heading {
+  margin-bottom: 3rem;
+}
+
+.contact__text {
+  margin-bottom: 5rem;
+}
+
+.contact__icon-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+
+.contact__icon {
+  font-size: 3rem;
+  width: 3rem;
+  margin-right: 3rem;
+}
+
+.contact__icon-text {
+  padding-top: 0.4rem;
 }
 
 /* HOMEPAGE
