--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -12,6 +12,7 @@
 
 
   &__label {
+    display: block;
     font-weight: 600;
 
     & > .required {
@@ -33,44 +34,50 @@
     height: 3.8rem;
     padding: 0 1.5rem;
     margin: 0.5rem 0 2rem 0;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    font-family: Poppins;
     line-height: 3.8rem;
-    background-color: $light-grey;
+    background-color: $white;
     color: $black;
     border-radius: $border-radius-default;
-    border: none;
+    border: 2px solid $medium-grey;
+    outline: none;
   }
+
 
   &__text-area {
     width: 100%;
     padding: 1rem 1.5rem;
     margin: 0.5rem 0 2rem 0;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    font-family: Poppins;
     line-height: 2.4rem;
-    background-color: $light-grey;
+    background-color: $white;
     color: $black;
     border-radius: $border-radius-default;
-    border: none;
+    border: 2px solid $medium-grey;
+    outline: none;
   }
+
 
   &__select {
     width: 100%;
     height: 3.8rem;
     padding: 0 1.5rem;
     margin: 0.5rem 0 2rem 0;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    font-family: Poppins;
     line-height: 3.8rem;
-    background-color: $light-grey;
+    background-color: $white;
     color: $black;
     border-radius: $border-radius-default;
-    border: none;
+    border: 2px solid $medium-grey;
+    outline: none;
   }
 
 
-  &__button {
-    width: 100%;
-    margin-top: 3rem;
-  }
+  &__button { margin: 2rem 1rem 0 0; }
+
 
   &__file-upload-button { margin: 1.5rem 0; }
 }
